fix layout issue

--- a/src/component/Room.css
+++ b/src/component/Room.css
@@ -4,6 +4,9 @@ body{
 
 video{
 width: 100%;
+height: 100%;
+position: absolute;
+top: 0;
   object-fit: cover;
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
